--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,9 @@
     font-size: 140%;
     float: right;
 }
-
-.div-border {
-    border: solid 5px black;
+#player-img {
+    border: solid black 1px;
+    width: 300px;
+    height: 300px;
+    margin-left: 25%;
 }
